--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -2,7 +2,7 @@ body,
 html {
   height: 100%;
   margin: 0;
-  overflow: hidden; /* This will hide any scrollbars */
+  overflow: hidden;
 }
 .search-container {
   display: flex;
