dropdown for breed is set.  search is working, getting JSON data.

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -19,7 +19,8 @@ i {
   justify-content: space-between;
   align-items: center;
   gap: 2rem;
-  padding: 0;
+  padding: 0 200px;
+
   background-color: rgb(255, 255, 255);
   min-height: 50px;
   z-index: 999;
