--- a/src/styles/dog-card.css
+++ b/src/styles/dog-card.css
@@ -1,43 +1,61 @@
 .dog-card {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  height: 100px;
-
-  border: 3px solid #ccc;
+  height: 400px;
+  width: 250px;
   border-radius: 8px;
-  padding: 20px;
+  padding: 10px;
   margin: 10px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: #27484b;
+  color: white;
+  box-shadow: 0 2px 4px rgb(9, 0, 0);
+  cursor: pointer;
 }
 
 .dog-details {
   display: flex;
-  flex-direction: row;
-  align-items: baseline;
-  justify-content: space-around;
-  width: 100%;
+  flex-direction: column;
 }
+.dog-name {
+  margin: 0 auto;
+}
+.dog-stats {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #315458;
+  border-radius: 5px;
+  margin-top: 5px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.368);
+}
+.dog-info {
+  max-width: 50%;
+  height: 50px;
 
-.dog-image {
-  width: 80px;
-  height: 80px;
-  border-radius: 8px;
-
-  object-fit: cover;
-  border-radius: 180px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+.dog-image {
+  width: 230px;
+  height: 230px;
+  object-fit: cover;
+  border-radius: 18px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.505);
+}
+
 .dog-name {
   font-size: 1.5rem;
-  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .dog-info {
   margin-bottom: 5px;
+  min-width: 115px;
 }
 .dog-details p {
   width: 150px;
@@ -45,15 +63,35 @@
 .dog-details h2 {
   width: 150px;
 }
+.selected {
+  box-shadow: 0 0 15px white;
+}
 
 .heart {
   color: red;
   font-size: 24px;
   background-color: transparent;
   border: none;
-  height: 36px;
-  width: 36px;
+  height: 50px;
+  width: 50px;
 }
 .heart:hover {
   font-size: 30px;
+}
+
+.icon {
+  font-size: 24px;
+  margin: 0 5px;
+}
+
+.age-icon {
+  color: rgb(0, 213, 255);
+}
+
+.location-icon {
+  color: rgb(245, 197, 23);
+}
+
+.breed-icon {
+  color: rgb(0, 203, 0);
 }
