--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -31,12 +31,27 @@ html {
 .next25 {
   cursor: pointer;
 }
+.btn {
+  border-radius: 15px;
+  min-width: 150px;
+  min-height: 30px;
+  cursor: pointer;
+}
+.btn:hover {
+  box-shadow: 0 0 10px white;
+}
 .pag-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 0 15px;
   color: blue;
+}
+.sort {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  padding: 0 15px;
 }
 /* .search {
   height: 3rem;
@@ -60,13 +75,13 @@ html {
 
 .search-results-container {
   position: absolute;
-  top: 100%;
+  top: 60%;
   left: 50%;
   transform: translateX(-50%);
-  background-color: white;
+  background-color: #1b3638;
   padding: 20px;
   width: 80%;
-  max-width: 1200px;
+  max-width: 1500px;
   border-radius: 15px;
   text-align: center;
 }
