--- a/src/styles/favorites.css
+++ b/src/styles/favorites.css
@@ -1,18 +1,46 @@
-.favorites-container {
-  margin-top: 7%;
-  text-align: center;
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
 }
-
+.favorites-container {
+  margin-top: 90px;
+  text-align: center;
+  flex: 1;
+  position: relative;
+  background-image: linear-gradient(#ff000000, #9bccd4);
+  box-shadow: inset 0 -5px 5px -5px black;
+  padding-bottom: 20px;
+}
+.card-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+}
 .match-btn {
   height: 100px;
   width: 300px;
   border-radius: 15px;
   font-size: 30px;
+  margin-bottom: 10px;
 }
 .match-btn:hover {
   cursor: pointer;
-  box-shadow: 5px 5px violet;
-  height: 110px;
-  width: 310px;
-  font-size: 36px;
+  box-shadow: 0 0 5px 5px #1b3638;
+  /* height: 110px;
+  width: 310px; */
+}
+.main {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  position: relative;
+}
+.foot {
+  position: relative;
+  flex-shrink: 0;
+  bottom: 0;
+  width: 100vw;
 }
