--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,5 +1,7 @@
 .footer {
   margin: 0 auto;
+  background-color: #a7d8df;
+  padding: 30px 0;
 }
 .footer-container {
   display: flex;
@@ -10,4 +12,25 @@
   display: flex;
   flex-direction: row;
   list-style-type: none;
+}
+.footer-bottom {
+  text-align: center;
+}
+
+@media (max-width: 500px) {
+  .footer-container {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .social-media ul {
+    margin: 5px 0;
+    justify-content: center;
+  }
+  .contact-info {
+    margin: 5px 0;
+  }
+  .contact-info h4 {
+    margin-bottom: 5px 0;
+  }
 }
