--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -37,7 +37,7 @@ container html {
   width: 100%;
 }
 .background-image {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
