--- a/src/styles/favorites.css
+++ b/src/styles/favorites.css
@@ -5,13 +5,15 @@ body {
   margin: 0;
 }
 .favorites-container {
-  margin-top: 90px;
+  margin-top: 50px;
   text-align: center;
   flex: 1;
   position: relative;
   background-image: linear-gradient(#ff000000, #9bccd4);
   box-shadow: inset 0 -5px 5px -5px black;
   padding-bottom: 20px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .match-container {
   position: relative;
@@ -25,10 +27,11 @@ body {
 .match-btn {
   height: 80px;
   width: 350px;
-
   font-size: 24px;
   margin-bottom: 10px;
   transition: all 0.35s;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .match-btn:hover {
   cursor: pointer;
