--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -2,6 +2,8 @@
   margin: 0 auto;
   background-color: #a7d8df;
   padding: 30px 0;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
+    'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .footer-container {
   display: flex;
